--- a/index pages/index.html
+++ b/index pages/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="..\scss pages\style.css">
+    <title>Gymnasia</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+
+        
+    </nav>
+
 </body>
 </html>
