--- a/index pages/index.html
+++ b/index pages/index.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="..\scss pages\style.css">
     <title>Gymnasia</title>
 </head>
 <body>
+<!--NavBar Start-->
     <nav class="navbar">
-
-        
+<h1>
+    <a href="index.html">
+        <i class="fa fa-universal-access " aria-hidden="true"></i>Gymnasia
+    </a>
+</h1>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Team</a></li>
+        </ul>
     </nav>
+<!--NavBar End-->
+
+
+
+
+
 
 </body>
 </html>
