--- a/index pages/index.html
+++ b/index pages/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
 <!--NavBar Start-->
-    <nav class="navbar">
+    <nav class="navbar bg-dark">
 <h1>
     <a href="index.html">
-        <i class="fa fa-universal-access " aria-hidden="true"></i>Gymnasia
+        <i class="fa fa-universal-access " aria-hidden="true"></i> Gymnasia
     </a>
 </h1>
         <ul>
@@ -24,8 +24,21 @@
 <!--NavBar End-->
 
 
-
-
+<!--Landing Page-->
+<section class="landing-page">
+<div class="dark-overlay">
+    <div class="landing-page-content">
+        <h1 class="x-large-text">GYMNASIA</h1>
+        <h2 class="large-text">Built For The Best</h2>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
+    <div class="buttons">
+        <a href="" class="btn btn-primary">Sign Up Now</a>
+        <a href="" class="btn btn-dark">Our Gyms</a>
+    </div>
+    </div>
+</div>
+</section>
+<!--End Of Landing Page-->
 
 
 </body>
