added our gyms page with navbar

--- a/index pages/gyms.html
+++ b/index pages/gyms.html
@@ -23,22 +23,17 @@
     </nav>
 <!--NavBar End-->
 
-
-<!--Landing Page-->
+<!--Gym Loactions-->
 <section class="landing-page">
-<div class="dark-overlay">
-    <div class="landing-page-content">
-        <h1 class="x-large-text">GYMNASIA</h1>
-        <h2 class="large-text">Built For The Best</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
-    <div class="buttons">
-        <a href="" class="btn btn-primary">Sign Up Now</a>
-        <a href="gyms.html" class="btn btn-dark">Our Gyms</a>
-    </div>
-    </div>
-</div>
-</section>
-<!--End Of Landing Page-->
+    <div class="gym">
+        <div class="white-box">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, repellendus qui officia, illo non facere optio dolores beatae, architecto excepturi mollitia tempora itaque explicabo enim est aperiam consequuntur quisquam unde odio distinctio nobis. Alias optio necessitatibus doloremque quisquam saepe, voluptatum, impedit quo aliquam odio delectus vel. Fugiat beatae voluptates natus.
+        </div>
+        </div>
+    </section>
+
+  
+  <!--End Of gym locations-->
 
 
 </body>
