--- a/index pages/gyms.html
+++ b/index pages/gyms.html
@@ -24,10 +24,12 @@
 <!--NavBar End-->
 
 <!--Gym Loactions-->
-<section class="landing-page">
+<section class="gym-page">
+    <div class="dark-overlay">
     <div class="gym">
         <div class="white-box">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, repellendus qui officia, illo non facere optio dolores beatae, architecto excepturi mollitia tempora itaque explicabo enim est aperiam consequuntur quisquam unde odio distinctio nobis. Alias optio necessitatibus doloremque quisquam saepe, voluptatum, impedit quo aliquam odio delectus vel. Fugiat beatae voluptates natus.
+        </div>
         </div>
         </div>
     </section>
