added new link to navbar

--- a/index pages/gyms.html
+++ b/index pages/gyms.html
@@ -17,16 +17,19 @@
 </h1>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="">Programs</a></li>
             <li><a href="">Team</a></li>
+            <li><a href="">Membership</a></li>
         </ul>
     </nav>
 <!--NavBar End-->
 
 <!--Gym Loactions-->
 <section class="gym-page">
+    
     <div class="dark-overlay">
     <div class="gym">
+        <div class="large-text">Our Various Locations</div>
         <div class="white-box">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, repellendus qui officia, illo non facere optio dolores beatae, architecto excepturi mollitia tempora itaque explicabo enim est aperiam consequuntur quisquam unde odio distinctio nobis. Alias optio necessitatibus doloremque quisquam saepe, voluptatum, impedit quo aliquam odio delectus vel. Fugiat beatae voluptates natus.
         </div>
