--- a/index pages/index.html
+++ b/index pages/index.html
@@ -17,8 +17,9 @@
 </h1>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="">Programs</a></li>
             <li><a href="">Team</a></li>
+            <li><a href="">Membership</a></li>
         </ul>
     </nav>
 <!--NavBar End-->
