--- a/index pages/gyms.html
+++ b/index pages/gyms.html
@@ -25,20 +25,62 @@
 <!--NavBar End-->
 
 <!--Gym Loactions-->
-<section class="gym-page">
-    
-    <div class="dark-overlay">
-    <div class="gym">
-        <div class="large-text">Our Various Locations</div>
-        <div class="white-box">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, repellendus qui officia, illo non facere optio dolores beatae, architecto excepturi mollitia tempora itaque explicabo enim est aperiam consequuntur quisquam unde odio distinctio nobis. Alias optio necessitatibus doloremque quisquam saepe, voluptatum, impedit quo aliquam odio delectus vel. Fugiat beatae voluptates natus.
+<div class="gym-page">
+     <div class="dark-overlay">
+        <div class="gym-page-content">
+            <br>
+            <br>
+            <br>
+            <h1 class="x-large-text">Our Locations</h1>  
+        <div class="gym-page-content-box">
+           <div class="content-1">
+               <img src="..\images\gym1.jpg" alt="">
+           </div>
+           <div class="content-2">
+            <h2 class="large-text gym-heading">New York City, NY</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
+            <div class="buttons">
+                <a href="" class="btn btn-primary btn-gym">More Info</a>
+                <a href="gyms.html" class="btn btn-dark btn-gym">Book Now</a>
+            </div>
+        </div>
+           <div class="content-3">
+            <h2 class="large-text gym-heading">Washington, DC</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
+            <div class="buttons">
+                <a href="" class="btn btn-primary btn-gym">More Info</a>
+                <a href="gyms.html" class="btn btn-dark btn-gym">Book Now</a>
+            </div>
+           </div>
+           <div class="content-4">
+            <img src="..\images\gym2.jpg" alt="">
+           </div>
+           <div class="content-1">
+            <img src="..\images\gym3.jpg" alt="">
+        </div>
+        <div class="content-2">
+            <h2 class="large-text gym-heading">Tyler, TX</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
+            <div class="buttons">
+                <a href="" class="btn btn-primary btn-gym">More Info</a>
+                <a href="gyms.html" class="btn btn-dark btn-gym">Book Now</a>
+            </div>
+        </div>
+        <div class="content-3"> 
+            <h2 class="large-text gym-heading">Los Angeles, CA</h2>
+            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
+            <div class="buttons">
+                <a href="" class="btn btn-primary btn-gym">More Info</a>
+                <a href="gyms.html" class="btn btn-dark btn-gym">Book Now</a>
+            </div></div>
+        <div class="content-4">
+         <img src="..\images\gym4.jpg" alt="">
         </div>
         </div>
-        </div>
-    </section>
-
-  
-  <!--End Of gym locations-->
+           </div>
+    </div>
+ </div>
+<!--End Of gym locations-->
 
 
 </body>
