added footer to created pages

--- a/index pages/gyms.html
+++ b/index pages/gyms.html
@@ -82,6 +82,10 @@
  </div>
 <!--End Of gym locations-->
 
-
+<!--Footer-->
+<section class="footer">
+    <p>&copy;2020 Gymnasia</p>
+</section>
+<!--End Of Footer-->
 </body>
 </html>
