--- a/index pages/index.html
+++ b/index pages/index.html
@@ -41,6 +41,10 @@
 </section>
 <!--End Of Landing Page-->
 
-
+<!--Footer-->
+<section class="footer">
+    <p>&copy;2020 Gymnasia</p>
+</section>
+<!--End Of Footer-->
 </body>
 </html>
