added membership page

--- a/index pages/gyms.html
+++ b/index pages/gyms.html
@@ -19,7 +19,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="">Programs</a></li>
             <li><a href="">Team</a></li>
-            <li><a href="">Membership</a></li>
+            <li><a href="membership.html">Membership</a></li>
         </ul>
     </nav>
 <!--NavBar End-->
