added background image and text colors to membership page

--- a/index pages/index.html
+++ b/index pages/index.html
@@ -33,7 +33,7 @@
         <h2 class="large-text">Built For The Best</h2>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam consequatur hic iure illum Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt molestias ipsam nesciunt</p>
         <div class="buttons">
-        <a href="" class="btn btn-primary">Sign Up Now</a>
+        <a href="#" class="btn btn-primary">Sign Up Now</a>
         <a href="gyms.html" class="btn btn-dark">Our Gyms</a>
     </div>
     </div>
