--- a/index pages/membership.html
+++ b/index pages/membership.html
@@ -23,10 +23,12 @@
         </ul>
     </nav>
 <!--NavBar End-->
-    <br>
-    <br>
+   
 <!--Memebership Section-->
-<div class="membership">
+<div class="membership-section">
+<div class="membership-heading">
+    <br>
+    <br>
 <h1 class="x-large-text center">Membership Packages</h1>
 <p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium culpa, necessitatibus doloremque eaque sunt nesciunt natus exercitationem consequatur. Iure aut nam quae temporibus illo ipsam reiciendis.</p>
 </div>
@@ -70,8 +72,9 @@
         </div>
             </div>
 </div>
+</div>
 <!--End of membership section-->
-<br>
+
 <!--Footer-->
 <section class="footer">
     <p>&copy;2020 Gymnasia</p>
