added gym links to pages

--- a/index pages/membership.html
+++ b/index pages/membership.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="..\scss pages\style.css">
     <title>Gymnasia</title>
+<style>
+    body{
+        width:100%;
+    }
+</style>
 </head>
 <body>
 <!--NavBar Start-->
@@ -17,7 +22,7 @@
 </h1>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">Programs</a></li>
+            <li><a href="gyms.html">Our Gyms</a></li>
             <li><a href="">Team</a></li>
             <li><a href="membership.html">Membership</a></li>
         </ul>
