--- a/index pages/sign-in.html
+++ b/index pages/sign-in.html
@@ -17,7 +17,7 @@
 </h1>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="">Programs</a></li>
+            <li><a href="gyms.html">Our Gyms</a></li>
             <li><a href="">Team</a></li>
             <li><a href="membership.html">Membership</a></li>
         </ul>
