--- a/index pages/membership.html
+++ b/index pages/membership.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="gyms.html">Our Gyms</a></li>
-            <li><a href="">Team</a></li>
+            <li><a href="team.html">Team</a></li>
             <li><a href="membership.html">Membership</a></li>
         </ul>
     </nav>
