--- a/index pages/team.html
+++ b/index pages/team.html
@@ -24,6 +24,50 @@
     </nav>
 <!--NavBar End-->
 
+<!--Team-->
+<h1 class="x-large-text center team-text">
+    <i class="fa fa-users" aria-hidden="true"></i>
+    Take a look at our world class team
+ 
+</h1>
+
+<div class="team-grid">
+    <div class="profile-card 1">
+        <img src="../images/trainer 1.jpg" />
+      </div>
+      <div class="team-lead">
+<h2>Steven Johnson</h2>
+<p>Trainer</p>
+<p> <i class="fa fa-map-marker" aria-hidden="true"></i> Boston, MA</p>
+<p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae quasi quidem omnis quos delectus, repellendus fuga asperiores maiores eveniet.ipsum dolor sit amet consectetur adipisicing elit. Nesciunt non repellat voluptatibus?</p>
+<a href="#" class="btn btn-primary">View Profile</a>
+</div>
+<br>
+<div class="profile-card 2">
+    <img src="../images/trainer 2.jpg" />
+  </div>
+  <div class="team-lead">
+<h2>Justin Roberts</h2>
+<p>Boxing Coach</p>
+<p> <i class="fa fa-map-marker" aria-hidden="true"></i> Tyler, TX</p>
+<p>Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum minus fugit ipsam voluptas! Itaque vero odio at consequatur sit quidem tenetur consequuntur, laboriosam ducimus culpa eos iste officiis minus fuga quasi ea?ipsum dolor sit amet consectetur adipisicing elit. Nesciunt non repellat voluptatibus?</p>
+<a href="#" class="btn btn-primary">View Profile</a>
+</div>
+<br>
+<div class="profile-card 3">
+    <img src="../images/trainer 3.jpg" />
+  </div>
+  <div class="team-lead">
+<h2>Yolanda Traversy</h2>
+<p>Yoga Expert</p>
+<p> <i class="fa fa-map-marker" aria-hidden="true"></i> Los Angeles, CA</p>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit voluptate velit ipsum corrupti ea. Corrupti dolore aspernatur earum, adipisci quos maiores.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt non repellat voluptatibus?</p>
+<a href="#" class="btn btn-primary">View Profile</a>
+</div>
+
+     </div>
+<!--End of team grid-->
+<br>
 <!--Footer-->
 <section class="footer">
     <p>&copy;2020 Gymnasia</p>
