--- a/membership.html
+++ b/membership.html
@@ -16,9 +16,9 @@
 <body>
 <!--NavBar Start-->
     <nav class="navbar bg-dark">
-<h1>
-    <a href="index.html">
-        <i class="fa fa-universal-access " aria-hidden="true"></i> Gymnasia
+<h1 class="home-icon">
+    <a href="index.html" >
+        <i class="fa fa-universal-access" aria-hidden="true"></i> Gymnasia
     </a>
 </h1>
         <ul>
